# OpenStory

./: CLAUDE.md  LICENSE  README.md  README_en.md  README_zh.md
examples/WorldKernel/: .env.example  CLAUDE.md  pyproject.toml
examples/WorldKernel/configs/: models.yaml  stage1_schemas.yaml
examples/WorldKernel/configs/entity_schemas/: agent.yaml
examples/WorldKernel/configs/entity_schemas/dims/: capabilities.yaml  constraints.yaml  goals.yaml  identity.yaml  personality.yaml  relations.yaml  social_profile.yaml  state.yaml  visual.yaml
examples/WorldKernel/configs/world_types/: campus.yaml  closed_space.yaml  hospital.yaml  market.yaml  town.yaml
examples/WorldKernel/frontend/: app.js  index.html  style.css
examples/WorldKernel/src/worldkernel/: server.py
examples/WorldKernel/src/worldkernel/llm/: client.py  config_loader.py
examples/WorldKernel/src/worldkernel/models/: agent_schema.py  stage1_types.py  world_spec.py
examples/WorldKernel/src/worldkernel/prompts/: stage1_classify_world.md  stage1_generate_templates.md  stage1_parse_intent.md  stage1_plan_generation.md  stage1_select_schema.md
examples/WorldKernel/src/worldkernel/stage1/: generation_planner.py  intent_parser.py  ontology_selector.py  pipeline.py  rag_extractor.py  template_retriever.py  world_spec.py  world_type_classifier.py
examples/WorldKernel/src/worldkernel/stage1/prompts/: classify_world.md  generate_templates.md  plan_generation.md
examples/WorldKernel/templates/2c5d0a51-6a56-4133-b4b9-f8dd2e988898/configs/agent/: agent.yaml
examples/WorldKernel/tests/: test_stage1.py
(+101 files in other folders)
