[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "worldkernel"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "agentkernel-standalone",
    "fastapi",
    "uvicorn[standard]",
    "openai>=1.0",
    "pydantic>=2.0",
    "pyyaml",
    "python-dotenv",
]

[tool.hatch.build.targets.wheel]
packages = ["src/worldkernel"]
